--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "redux": "4.2.0",
-    "simplebar-react": "^2.4.1"
+    "simplebar-react": "^2.4.1",
+    "sweetalert2": "^11.7.22"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
